Fix some button layout problems that in Chrome and IE. WP 3.5 has new button styles which don't work so great with my old padding values.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/branches/transitory@671144 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -40,7 +40,6 @@
 	display: block;
 	margin: 4px;
 	width: 120px;
-	padding: 4px;
 }
 
 #ws_editor_sidebar #ws_save_menu {
@@ -245,7 +244,7 @@ a.ws_edit_link:hover {
 	float: left;
 	
 	width: 20px;
-	height: 20px;
+	height: 22px;
 	
 	margin: 1px 1px 1px 0;
 	padding: 0;
